# helicopyter

./: .codespell-ignore  .cookiecutter.yaml  .gitignore  .gitignore.in  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.toml  .shellcheckrc  .tool-versions  .yamllint.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  configuration.md  cookiecutter.json  helicopyter.py  heliport.py  includes.sh  justfile  mise.toml  package-lock.json  package.json  pypi_compatible_build.py  pyproject.toml  requirements.in  requirements.txt  shell_includes.sh  style.md  test_grit.py  test_helicopyter.py  test_tooling.py  try_repo.py
.biobuddies/: autoformat-excludes  basedpyright.toml  dictionary.txt  includes.bash  justfile  ruff.toml  typos.toml
.github/: actionlint.yaml  copilot-instructions.md  pull_request_template.md
.github/workflows/: check.yaml  check.yml
.grit/patterns/: inline_single_use_assignment.grit  inline_single_use_assignment.md
deploys/allowedflare/terraform/: .gitignore  .terraform.lock.hcl  main.py
deploys/buddies/: .gitignore
deploys/buddies/terraform/: .terraform.lock.hcl  main.py  main.tf  main.tf.json
deploys/classdemo/terraform/: .terraform.lock.hcl  main.py  main.tf  main.tf.json
deploys/demo/ansible/: main.py
deploys/demo/terraform/: .terraform.lock.hcl  main.py  main.tf  main.tf.json
deploys/demo_hcl/terraform/: main.py  main.tf
deploys/djec2/terraform/: .terraform.lock.hcl  main.py  main.tf
deploys/foundation/terraform/: .terraform.lock.hcl  main.py  main.tf  main.tf.json
deploys/helidemo/terraform/: main.py  main.tf.json
deploys/people/terraform/: main.py
documentation/: djangocon-us-2024.md  learn_cdktf_docker.py  learn_helicopyter_docker.py  self2024-python-defined-infrastructure.md
documentation/learn_cdktf_docker/: cdktf.py  helicopyter.py
helicopyter/: __init__.py  __main__.py
hooks/: post_gen_project.bash  post_gen_project.sh
providers/: cloudflare.py  functions.py
stacks/: base.py
{{cookiecutter.dot}}/: .editorconfig  .prettierrc.toml  .yamllint.yaml
{{cookiecutter.dot}}/.biobuddies/: dictionary.txt  forceready.py  includes.bash  justfile  ruff.toml  typos.toml
{{cookiecutter.dot}}/.github/: copilot-instructions.md  pull_request_template.md
