[build-system]
requires = ['setuptools>=61.0', 'setuptools_scm[toml]>=6.2', 'wheel']
build-backend = 'pypi_compatible_build'
backend-path = ['']

[project]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Operating System :: OS Independent',
    'Topic :: System :: Systems Administration',
    'Topic :: System :: Installation/Setup',
]
description = 'Python Terraform JSON configuration generator'
dependencies = ['cdk8s', 'cdktf', 'cdktf-cdktf-provider-null', 'typed-argument-parser']
dynamic = ['version']
name = 'helicopyter'
readme = 'README.md'

[project.optional-dependencies]
buildrelease = ['build', 'ipython', 'twine']
demos = [
    'cdktf-cdktf-provider-aws',
    # prebuilt package 12+ brings provider 5+
    # https://registry.terraform.io/providers/cloudflare/cloudflare/latest/docs/guides/version-5-upgrade
    'cdktf-cdktf-provider-cloudflare==11.*',
    'cdktf-cdktf-provider-docker',
    'cdktf-cdktf-provider-github',
]
precommit = [
    'actionlint-py',
    'codespell>=2.3',                                               # For codespell inline ignore comment support
    'cookiecutter',
    'django-upgrade',
    'djlint',
    'hadolint-py @ git+https://github.com/AleksaC/hadolint-py.git',
    'mypy',
    'pre-commit',
    'pre-commit-hooks',
    'pytest',
    'pytest-cov',
    'ruff',
    'rust-just',
    'shellcheck-py',
    'shfmt-py',
    'types-setuptools',
    'typos',
    # uv from asdf
    'validate-pyproject[all]',
    'yamllint',
]

[project.urls]
source = 'https://github.com/biobuddies/helicopyter'

[tool.basedpyright]
extends = '.biobuddies/basedpyright.toml'
failOnWarnings = false

[tool.ruff]
extend = '.biobuddies/ruff.toml'

[tool.setuptools]
py-modules = ['helicopyter']

[tool.setuptools.packages.find]
exclude = ['deploys*', 'node_modules*'] # Applies to wheel but not sdist

[tool.setuptools_scm]
